updated index and base html

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Rating</a>
                 <a href="" class="dropdown-item ">By Package</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="{% url 'goods' %}" class="dropdown-item">All Packages</a>
             </div>
         </li>
 
